--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -52,7 +52,7 @@ nav li {
   font-size: 45px;
   margin-bottom: 20px;
 }
-.benner-description {
+.banner-description {
   color: #757575;
   font-size: 18px;
   margin-bottom: 20px;
