--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,6 +12,10 @@
   border: 0;
   padding: 18px 35px;
 }
+
+section {
+    margin-top: 130px;
+  }
 /* header and navigation styles */
 .header {
   background: #fff8f3;
@@ -66,36 +70,58 @@ main {
 /* about section */
 
 .about {
-  margin: 130px;
+ 
   background: #fff8f3;
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-
 }
 .section-title {
   text-align: center;
   font-weight: 700;
   font-size: 35px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+
+
 }
 .section-description {
   color: #757575;
   font-size: 18px;
   margin-bottom: 30px;
 }
-.about-info-container{
-    display: flex;
-    justify-content: space-around;
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
 }
-.about .info-title{
-    font-weight: 400;
-font-size: 20px;
-color: #757575;
+.about .info-title {
+  font-weight: 400;
+  font-size: 20px;
+  color: #757575;
 }
-.info-description{
-    color: #474747;
-    font-weight: 700;
-font-size: 20px;
+.info-description {
+  color: #474747;
+  font-weight: 700;
+  font-size: 20px;
+}
+/* what i do style */
 
+.skill-container {
+  display: flex;
+  gap: 24px;
 }
+.skill {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
+}
+.skill-title {
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.skill-description {
+  color: #757575;
+}
+/* Resume style  */
