--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -49,8 +49,8 @@ nav li {
   margin: 0 200px;
   align-items: center;
 }
-.banner-title {
-}
+/* .banner-title {
+} */
 .banner-sub-title {
   font-weight: 600;
   font-size: 45px;
